# tlpi_solutions

./: CMakeLists.txt  README.md
15/: CMakeLists.txt  chattr_15_7.c  check_access_15_4.c  chmodarx_15_6.c  file_perms.c  get_umask_15_5.c  perm_demo.sh  perm_demo_15_1.md  stat_time_change_15_2.md  t_stats_15_3.c
16/: CMakeLists.txt  setuserxattr_16_1.c
57/: CMakeLists.txt  fast_client_57_1.c  reliable_ud.h  sendto_connected_57_4.md  seq_num_stream.h  sequence_num_client_57_3.c  sequence_num_server_57_3.c  slow_server_57_1.c  socket_a_57_4.c  socket_b_57_4.c  socket_c_57_4.c  three_sock.h  us_abstract.h  us_abstract_bind_cl_57_2.c  us_abstract_bind_sv_57_2.c
lib/: CMakeLists.txt  Makefile  ugid_functions.c  ugid_functions.h
